--- a/lecciones/01_intro/index.html
+++ b/lecciones/01_intro/index.html
@@ -50,7 +50,7 @@
   <article data-timings="">
     <p><em>Campo interdisciplinario que se basa y sintetiza una serie de disciplinas y áreas del conocimiento, incluyendo <strong>estadística</strong>, <strong>informática</strong>, <strong>computación</strong>, <strong>comunicación</strong>, <strong>administración</strong>, y <strong>sociología</strong>, con el objetivo descubrir conocimento a partir de los datos</em></p>
 
-<p><img class=center src="../assets/img/data_science.jpg" height=400 /></p>
+<p><img class=center src="../assets/img/data_science_diagrama.png" height=400 /></p>
 
 <p><a href="https://cacm.acm.org/magazines/2017/8/219605-data-science/fulltext">Data Science: Challenges and Directions</a></p>
 
