Improve slides of intro class

--- a/lecciones/01_intro/index.html
+++ b/lecciones/01_intro/index.html
@@ -58,23 +58,42 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:;">
+<slide class="" id="slide-2" style="background:;">
   <hgroup>
-    <h2>¿Por qué la ciencia de los datos?</h2>
+    <h2>Motivación</h2>
   </hgroup>
   <article data-timings="">
-    <p>Test slide 2</p>
+    
+<div style='float:left;width:48%;' class='centered'>
+  <p>Nunca antes tuvimos acceso a tantos datos (big data)</p>
 
+<p><img class=left src="../assets/img/deluge.png" height=400 /></p>
+
+<p><a href="http://www.economist.com/node/15579717">The Data Deluge</a></p>
+
+</div>
+<div style='float:right;width:48%;'>
+  <p>El big data es el motor de la innovación actual (self-driving cars, real-time object classifiers, voice assistants, chatbots)</p>
+
+<p><img class=left src="../assets/img/connectedcars-1.png" height=250 /></p>
+
+<p><a href="http://www.businessinsider.com/connected-cars-2015-9">Big Data Hits the Road</a></p>
+
+</div>
   </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-3" style="background:;">
   <hgroup>
-    <h2>Data</h2>
+    <h2>Motivación</h2>
   </hgroup>
   <article data-timings="">
-    <p>Test slide 2</p>
+    <p>La demanda de científicos de datos ha crecido <strong>exponencialmente</strong> desde el 2011</p>
+
+<p><img class=center src="../assets/img/chart-data-science.png" height=400 /></p>
+
+<p><a href="http://blog.edx.org/the-importance-of-data-science-in-the-21st-century">Data Scientist: The Number One Job In America</a></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -82,10 +101,12 @@
 
 <slide class="" id="slide-4" style="background:;">
   <hgroup>
-    <h2>Data Science</h2>
+    <h2>Datos (el nuevo petróleo)</h2>
   </hgroup>
   <article data-timings="">
-    <p>Test slide 3</p>
+    <p><img class=center src="../assets/img/data-new-oil.jpg" height=500 /></p>
+
+<p><a href="https://www.economist.com/news/leaders/21721656-data-economy-demands-new-approach-antitrust-rules-worlds-most-valuable-resource">The world’s most valuable resource is no longer oil, but data</a></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -93,16 +114,37 @@
 
 <slide class="" id="slide-5" style="background:;">
   <hgroup>
-    <h2>Big data</h2>
+    <h2>Datos</h2>
   </hgroup>
   <article data-timings="">
-    <p>Test slide 4</p>
+    <p><q>Los datos son valores pertenecientes a un <redtext>conjuntos de items</redtext> y representados a través de <code>variables</code> <strong>cualitativas o cuantitativas</strong>.</q></p>
+
+<p><redtext>Conjunto de items</redtext>: Conjunto de objetos de interés, a veces llamado población</p>
+
+<p><code>Variables</code>: Medida o característica de un item</p>
+
+<p><strong>Cualitativo</strong>: Pais de origen, sexo, religión, <strong>Cuantitativo</strong>: Altura, peso, edad</p>
+
+<p><a href="http://en.wikipedia.org/wiki/Data">Data (Wikipedia)</a></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-6" style="background:;">
+  <hgroup>
+    <h2>Big data (las 4 Vs)</h2>
+  </hgroup>
+  <article data-timings="">
+    <p><em>Datos con alto volumen, alta velocidad, alta variedad, y alta veracidad</em> (Foster et al., Big Data and Social Science)</p>
+
+<p><img class=center src="../assets/img/4-Vs-of-big-data.jpg" height=450 /></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-7" style="background:;">
   <hgroup>
     <h2>¿Qué hace un científico de datos?</h2>
   </hgroup>
@@ -113,7 +155,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-7" style="background:;">
+<slide class="" id="slide-8" style="background:;">
   <hgroup>
     <h2>Sobre mi</h2>
   </hgroup>
@@ -124,7 +166,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-8" style="background:;">
+<slide class="" id="slide-9" style="background:;">
   <hgroup>
     <h2>Organización del curso</h2>
   </hgroup>
@@ -142,7 +184,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-9" style="background:;">
+<slide class="" id="slide-10" style="background:;">
   <hgroup>
     <h2>Proyecto (BECAL)</h2>
   </hgroup>
@@ -153,7 +195,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-10" style="background:;">
+<slide class="" id="slide-11" style="background:;">
   <hgroup>
     <h2>Evaluación</h2>
   </hgroup>
@@ -176,56 +218,62 @@
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='¿Por qué la ciencia de los datos?'>
+        data-slide=2 title='Motivación'>
          2
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Data'>
+        data-slide=3 title='Motivación'>
          3
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='Data Science'>
+        data-slide=4 title='Datos (el nuevo petróleo)'>
          4
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=5 title='Big data'>
+        data-slide=5 title='Datos'>
          5
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=6 title='¿Qué hace un científico de datos?'>
+        data-slide=6 title='Big data (las 4 Vs)'>
          6
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=7 title='Sobre mi'>
+        data-slide=7 title='¿Qué hace un científico de datos?'>
          7
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=8 title='Organización del curso'>
+        data-slide=8 title='Sobre mi'>
          8
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=9 title='Proyecto (BECAL)'>
+        data-slide=9 title='Organización del curso'>
          9
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=10 title='Evaluación'>
+        data-slide=10 title='Proyecto (BECAL)'>
          10
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=11 title='Evaluación'>
+         11
       </a>
     </li>
   </ul>
@@ -238,7 +286,21 @@
 </body>
   <!-- Load Javascripts for Widgets -->
   
-  <!-- LOAD HIGHLIGHTER JS FILES -->
+  <!-- MathJax: Fall back to local if CDN offline but local image fonts are not supported (saves >100MB) -->
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        inlineMath: [['$','$'], ['\\(','\\)']],
+        processEscapes: true
+      }
+    });
+  </script>
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/2.0-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <!-- <script src="https://c328740.ssl.cf1.rackcdn.com/mathjax/2.0-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script> -->
+  <script>window.MathJax || document.write('<script type="text/x-mathjax-config">MathJax.Hub.Config({"HTML-CSS":{imageFont:null}});<\/script><script src="../libraries/widgets/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"><\/script>')
+</script>
+<!-- LOAD HIGHLIGHTER JS FILES -->
   <script src="../libraries/highlighters/highlight.js/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <!-- DONE LOADING HIGHLIGHTER JS FILES -->
