Add new content to the presentation of the intro class

--- a/lecciones/01_intro/index.html
+++ b/lecciones/01_intro/index.html
@@ -146,27 +146,16 @@
 
 <slide class="" id="slide-7" style="background:;">
   <hgroup>
-    <h2>¿Qué hace un científico de datos?</h2>
+    <h2>Sobre mi</h2>
   </hgroup>
   <article data-timings="">
-    <p>Test slide 5</p>
+    <p><img class=center src="../assets/img/aboutme.png" height=550 /></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-8" style="background:;">
-  <hgroup>
-    <h2>Sobre mi</h2>
-  </hgroup>
-  <article data-timings="">
-    <p>Test slide 6</p>
-
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-
-<slide class="" id="slide-9" style="background:;">
   <hgroup>
     <h2>Organización del curso</h2>
   </hgroup>
@@ -184,7 +173,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-10" style="background:;">
+<slide class="" id="slide-9" style="background:;">
   <hgroup>
     <h2>Proyecto (BECAL)</h2>
   </hgroup>
@@ -195,7 +184,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-11" style="background:;">
+<slide class="" id="slide-10" style="background:;">
   <hgroup>
     <h2>Evaluación</h2>
   </hgroup>
@@ -248,32 +237,26 @@
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=7 title='¿Qué hace un científico de datos?'>
+        data-slide=7 title='Sobre mi'>
          7
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=8 title='Sobre mi'>
+        data-slide=8 title='Organización del curso'>
          8
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=9 title='Organización del curso'>
+        data-slide=9 title='Proyecto (BECAL)'>
          9
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=10 title='Proyecto (BECAL)'>
+        data-slide=10 title='Evaluación'>
          10
-      </a>
-    </li>
-    <li>
-      <a href="#" target="_self" rel='tooltip' 
-        data-slide=11 title='Evaluación'>
-         11
       </a>
     </li>
   </ul>
