Add new content to the presentation of the intro class

--- a/lecciones/01_intro/index.html
+++ b/lecciones/01_intro/index.html
@@ -117,13 +117,13 @@
     <h2>Datos</h2>
   </hgroup>
   <article data-timings="">
-    <p><q>Los datos son valores pertenecientes a un <redtext>conjuntos de items</redtext> y representados a través de <code>variables</code> <strong>cualitativas o cuantitativas</strong>.</q></p>
+    <p><q>Los datos son valores pertenecientes a un <redtext>conjuntos de items</redtext> y representados a través de <greentext>variables</greentext> <bluetext>cualitativas o cuantitativas</bluetext>.</q></p>
 
 <p><redtext>Conjunto de items</redtext>: Conjunto de objetos de interés, a veces llamado población</p>
 
-<p><code>Variables</code>: Medida o característica de un item</p>
+<p><greentext>Variables</greentext>: Medida o característica de un item</p>
 
-<p><strong>Cualitativo</strong>: Pais de origen, sexo, religión, <strong>Cuantitativo</strong>: Altura, peso, edad</p>
+<p><bluetext>Cualitativo</bluetext>: Pais de origen, sexo, religión, <bluetext>Cuantitativo</bluetext>: Altura, peso, edad</p>
 
 <p><a href="http://en.wikipedia.org/wiki/Data">Data (Wikipedia)</a></p>
 
@@ -136,7 +136,7 @@
     <h2>Big data (las 4 Vs)</h2>
   </hgroup>
   <article data-timings="">
-    <p><em>Datos con alto volumen, alta velocidad, alta variedad, y alta veracidad</em> (Foster et al., Big Data and Social Science)</p>
+    <p><em>Datos con alto volumen, alta velocidad, alta variedad, y alta veracidad</em> <a href="https://www.amazon.com/Big-Data-Social-Science-Statistics/dp/1498751407/ref=sr_1_1?ie=UTF8&amp;qid=1506629819&amp;sr=8-1&amp;keywords=big+data+and+social+science">(Foster et al., Big Data and Social Science)</a></p>
 
 <p><img class=center src="../assets/img/4-Vs-of-big-data.jpg" height=450 /></p>
 
@@ -178,7 +178,13 @@
     <h2>Proyecto (BECAL)</h2>
   </hgroup>
   <article data-timings="">
-    <p>Test slide 6</p>
+    <p>BECAL es el programa nacional de becas de postgrados en el exterior del gobierno nacional. Hasta el momento el gobierno nacional lleva invertido en el mismo casi <strong>120.000.000 millones de guaranies</strong> en la financiación de cerca de <strong>900 becarios</strong>, sin embargo, poco se conoce del perfil de los beneficiarios (edad, sexo, nivel socio-económico, profesión, sector laboral, etc). Además, se sabe poco de las capacidades que estos beneficiarions adquieren en sus estudios y que ayudarán a potenciar la fuerza laboral local. Entonces, <redtext><em><strong>hasta el momento es difícil cuantificar cual es el beneficio real del programa para el país</strong></em></redtext>.</p>
+
+<p>En este proyecto utilizarremos técnicas de ciencia de los datos para conocer más en detalle la política de becas del gobierno nacional.</p>
+
+<p><img class=center src="../assets/img/logo-becal.png" height=150 /></p>
+
+<p><a href="http://www.becal.gov.py/informe-becal-actualizacion/">Informe BECAL - Marzo 2017</a></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -189,7 +195,24 @@
     <h2>Evaluación</h2>
   </hgroup>
   <article data-timings="">
-    <p>Test slide 7</p>
+    <p>Para la obtención de los 2 créditos académicos es necesario cumplir con los siguientes requisitos.</p>
+
+<ul>
+<li><p>Asistencia a 80% de la clases</p></li>
+<li><p>Alcanzar el 70% del puntaje total de las tareas dentro del proyecto BECAL:</p>
+
+<ul>
+<li>Base conceptual: 5 pts.</li>
+<li>Git: 5 pts.</li>
+<li>Preprocesamiento: 20 pts.</li>
+<li>EDA: 30 pts.</li>
+<li>Inferencia: 25 pts.</li>
+<li>Aprendizaje: 15 pts.</li>
+</ul></li>
+<li><p>Con la continuidad del proyecto posterior a la culminación del curso se podrán otorgar créditos adicionales si el resultado alcanzado deriva en una publicación científica.</p></li>
+</ul>
+
+<p><a href="https://github.com/joausaga/datascience-course">Sitio del Curso</a></p>
 
   </article>
   <!-- Presenter Notes -->
