Add a new slice at the end of the presentation

--- a/lecciones/01_intro/index.html
+++ b/lecciones/01_intro/index.html
@@ -218,6 +218,20 @@
   <!-- Presenter Notes -->
 </slide>
 
+<slide class="" id="slide-11" style="background:;">
+  <hgroup>
+    <h2>Libros de referencia</h2>
+  </hgroup>
+  <article data-timings="">
+    <ul>
+<li><p>Bruce P. and Bruce A., <em>Practical Statistics for Data Scientists: 50 Essential Concepts</em>, O&#39;Reilly</p></li>
+<li><p>Foster I., Ghani R., Jarmin R., Kreuter F., Lane J., <em>Big Data and Social Science: A Practical Guide to Methods and Tools</em>, Chapman and Hall</p></li>
+</ul>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
     <slide class="backdrop"></slide>
   </slides>
   <div class="pagination pagination-small" id='io2012-ptoc' style="display:none;">
@@ -280,6 +294,12 @@
       <a href="#" target="_self" rel='tooltip' 
         data-slide=10 title='Evaluación'>
          10
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=11 title='Libros de referencia'>
+         11
       </a>
     </li>
   </ul>
