Improve slides of lesson 3

--- a/lecciones/03_git/index.html
+++ b/lecciones/03_git/index.html
@@ -159,7 +159,7 @@
 
 <slide class="" id="slide-7" style="background:;">
   <hgroup>
-    <h2>Agregar archivos (stage)</h2>
+    <h2>Agregar archivos (staging)</h2>
   </hgroup>
   <article data-timings="">
     <ul>
@@ -180,51 +180,70 @@
 
 <slide class="" id="slide-8" style="background:;">
   <hgroup>
-    <h2>Commit</h2>
+    <h2>Registrar cambios (commiting)</h2>
   </hgroup>
   <article data-timings="">
-    <p class='..</p>
+    <p>Luego de agregar los archivos, agregar un mensaje en el textbox de la parte inferior de la pantalla y hacer clic en el botón <strong>Commit</strong></p>
 
- '></article>
+<p><img class=center src="../assets/img/commit_sourcetree.png" height=450 /></p>
+
+  </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-9" style="background:;">
   <hgroup>
-    <h2>Push</h2>
+    <h2>Enviar cambios (pushing)</h2>
   </hgroup>
   <article data-timings="">
-    <p class='..</p>
+    <p>Hacer clic en el botón <strong>Push</strong> del menú superior y luego clic en el botón <strong>OK</strong></p>
 
- '></article>
+<p><img class=center src="../assets/img/push_sourcetree.png" height=400 /></p>
+
+  </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-10" style="background:;">
   <hgroup>
-    <h2>Pull</h2>
+    <h2>Github, servicio web Git</h2>
   </hgroup>
   <article data-timings="">
-    <p class='..</p>
+    <p><q>GitHub es un servicio web para alojar proyectos de desarrollo de software que utiliza el sistema de control de revisiones Git.</q></p>
 
- '></article>
+<p><a href="http://en.wikipedia.org/wiki/GitHub">http://en.wikipedia.org/wiki/GitHub</a></p>
+
+  </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-11" style="background:;">
   <hgroup>
-    <h2>Markdown</h2>
+    <h2>Github, servicio web Git</h2>
   </hgroup>
   <article data-timings="">
-    <p class='..</p>
+    
+<div style='float:left;width:48%;' class='centered'>
+  <ul>
+<li>Permite a los usuarios hacer push (y pull) de sus repositorios locales hacia (y desde) repositorios remotos en la web, respaldandolos en el servidor de GitHub en caso de que algo ocurra con las copias locales</li>
+<li>Proporciona a los usuarios una página de inicio que muestra sus repositorios públicos</li>
+<li>Aspectos sociales de la plataforma permiten compartir proyectos entre usuarios</li>
+</ul>
 
- '></article>
+<p><a href="https://github.com">Github</a></p>
+
+</div>
+<div style='float:right;width:48%;'>
+  <p><img class=center src="../assets/img/profile_github.png" height=450 /></p>
+
+</div>
+  </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-12" style="background:;">
   <hgroup>
-    <h2>Github, cliente web Git</h2>
+    <h2>Fork</h2>
   </hgroup>
   <article data-timings="">
     <p class='..</p>
@@ -235,7 +254,18 @@
 
 <slide class="" id="slide-13" style="background:;">
   <hgroup>
-    <h2>Fork</h2>
+    <h2>Recibir cambios (pull)</h2>
+  </hgroup>
+  <article data-timings="">
+    <p class='..</p>
+
+ '></article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-14" style="background:;">
+  <hgroup>
+    <h2>Markdown</h2>
   </hgroup>
   <article data-timings="">
     <p class='..</p>
@@ -286,44 +316,50 @@
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=7 title='Agregar archivos (stage)'>
+        data-slide=7 title='Agregar archivos (staging)'>
          7
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=8 title='Commit'>
+        data-slide=8 title='Registrar cambios (commiting)'>
          8
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=9 title='Push'>
+        data-slide=9 title='Enviar cambios (pushing)'>
          9
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=10 title='Pull'>
+        data-slide=10 title='Github, servicio web Git'>
          10
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=11 title='Markdown'>
+        data-slide=11 title='Github, servicio web Git'>
          11
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=12 title='Github, cliente web Git'>
+        data-slide=12 title='Fork'>
          12
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=13 title='Fork'>
+        data-slide=13 title='Recibir cambios (pull)'>
          13
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=14 title='Markdown'>
+         14
       </a>
     </li>
   </ul>
