--- a/lecciones/02_base_teorica/index.html
+++ b/lecciones/02_base_teorica/index.html
@@ -67,7 +67,7 @@
     <h2>Estructura y representación de los datos</h2>
   </hgroup>
   <article data-timings="">
-    <p>En data science los datos se estructuran comúnmente en <strong>data frames</strong>, los cuales se componen de filas y columnas </p>
+    <p>En data science los datos se estructuran comúnmente de manera tabular en filas y columnas </p>
 
 <p><img class=center src="../assets/img/dataframe-a.png" height=450 /></p>
 
