--- a/lecciones/04_r_intro/index.html
+++ b/lecciones/04_r_intro/index.html
@@ -274,6 +274,182 @@ as.numeric(x)
 
 <slide class="" id="slide-11" style="background:;">
   <hgroup>
+    <h2>Matrices</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>Las matrices son un tipo especial de vectores donde los elementos se encuentran organizados en filas y columnas.</p>
+
+<pre><code class="r">m = matrix(1:6, nrow = 2, ncol = 3) # creando una matriz de 2 filas y 3 columnas
+m
+</code></pre>
+
+<pre><code>##      [,1] [,2] [,3]
+## [1,]    1    3    5
+## [2,]    2    4    6
+</code></pre>
+
+<p>En R las matrices son objetos que cuentan con el atributo <strong>dimensión</strong>.</p>
+
+<pre><code class="r">dim(m)  # opteniendo la dimensión de la matriz
+</code></pre>
+
+<pre><code>## [1] 2 3
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-12" style="background:;">
+  <hgroup>
+    <h2>Matrices</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>Las matrices son construidas por columna. El primer elemento se encuentra en la esquina superior izquierda y a partir de ahí los siguientes van creandose a lo largo de las columnas</p>
+
+<pre><code class="r">m = matrix(1:6, nrow = 2, ncol = 3)
+m
+</code></pre>
+
+<pre><code>##      [,1] [,2] [,3]
+## [1,]    1    3    5
+## [2,]    2    4    6
+</code></pre>
+
+<p>Para acceder a los elementos de la matriz se debe indicar entre <code>[]</code> la fila y columna separado por <code>,</code></p>
+
+<pre><code class="r">m[2, 1] # elemento de la segunda fila primera columna 
+</code></pre>
+
+<pre><code>## [1] 3
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-13" style="background:;">
+  <hgroup>
+    <h2>Atributos</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>La función <code>attributes</code> sirve para conocer los atributos de un objeto en R.</p>
+
+<pre><code class="r">attributes(m)
+</code></pre>
+
+<pre><code>## $dim
+## [1] 2 3
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-14" style="background:;">
+  <hgroup>
+    <h2>cbind-ing y rbind-ing</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>Las matrices también pueden ser creadas acoplando vectores por columna o fila con las funciones <code>cbind()</code> and <code>rbind()</code>, respectivamente</p>
+
+<pre><code class="r">x = 1:3  # creando vector con la sequencia de enteros 1, 2, 3
+y = 10:12  # creando vector con la sequencia de enteros 10, 11, 12
+z = cbind(x, y)  # acoplando los vectores por columna para crear una matriz
+z
+</code></pre>
+
+<pre><code>##      x  y
+## [1,] 1 10
+## [2,] 2 11
+## [3,] 3 12
+</code></pre>
+
+<pre><code class="r">w = rbind(x, y) # acoplando los vectores por fila para crear una matriz
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-15" style="background:;">
+  <hgroup>
+    <h2>Listas</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>Las listas son un tipo especial de vectores que pueden contener elementos de diferentes clases</p>
+
+<pre><code class="r">x = list(1, &quot;a&quot;, TRUE, 1 + 4i) 
+x
+</code></pre>
+
+<pre><code>## [[1]]
+## [1] 1
+## 
+## [[2]]
+## [1] &quot;a&quot;
+## 
+## [[3]]
+## [1] TRUE
+## 
+## [[4]]
+## [1] 1+4i
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-16" style="background:;">
+  <hgroup>
+    <h2>Factores</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>Los factores son usados en R para representar datos categóricos</p>
+
+<pre><code class="r">x = factor(c(&#39;yes&#39;, &#39;yes&#39;, &#39;no&#39;, &#39;yes&#39;, &#39;no&#39;)) 
+x
+</code></pre>
+
+<pre><code>## [1] yes yes no  yes no 
+## Levels: no yes
+</code></pre>
+
+<p>La función <code>table</code> muestra la frecuencia de cada categoría.</p>
+
+<pre><code class="r">table(x)
+</code></pre>
+
+<pre><code>## x
+##  no yes 
+##   2   3
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-17" style="background:;">
+  <hgroup>
+    <h2>Factores ordenados</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>En R los datos ordinales se represetan a través de factores ordenados. El orden de los factores se establece utilizando el argumento <code>levels</code> de la función <code>factor()</code></p>
+
+<pre><code class="r">x = factor(c(&#39;yes&#39;, &#39;yes&#39;, &#39;no&#39;, &#39;yes&#39;, &#39;no&#39;), levels=c(&#39;yes&#39;, &#39;no&#39;))
+x
+</code></pre>
+
+<pre><code>## [1] yes yes no  yes no 
+## Levels: yes no
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-18" style="background:;">
+  <hgroup>
     <h2>Atributos</h2>
   </hgroup>
   <article data-timings="">
@@ -293,7 +469,7 @@ as.numeric(x)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-12" style="background:;">
+<slide class="" id="slide-19" style="background:;">
   <hgroup>
     <h2>Atributos</h2>
   </hgroup>
@@ -303,7 +479,7 @@ as.numeric(x)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-13" style="background:;">
+<slide class="" id="slide-20" style="background:;">
   <hgroup>
     <h2>Operaciones básicas</h2>
   </hgroup>
@@ -314,7 +490,7 @@ as.numeric(x)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-14" style="background:;">
+<slide class="" id="slide-21" style="background:;">
   <hgroup>
     <h2>Estructuras de control</h2>
   </hgroup>
@@ -325,7 +501,7 @@ as.numeric(x)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-15" style="background:;">
+<slide class="" id="slide-22" style="background:;">
   <hgroup>
     <h2>Lectura de datos</h2>
   </hgroup>
@@ -336,7 +512,7 @@ as.numeric(x)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-16" style="background:;">
+<slide class="" id="slide-23" style="background:;">
   <hgroup>
     <h2>Visualización con ggplot2</h2>
   </hgroup>
@@ -347,7 +523,7 @@ as.numeric(x)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-17" style="background:;">
+<slide class="" id="slide-24" style="background:;">
   <hgroup>
     <h2>Gramática</h2>
   </hgroup>
@@ -358,7 +534,7 @@ as.numeric(x)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-18" style="background:;">
+<slide class="" id="slide-25" style="background:;">
   <hgroup>
     <h2>Histograma</h2>
   </hgroup>
@@ -369,7 +545,7 @@ as.numeric(x)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-19" style="background:;">
+<slide class="" id="slide-26" style="background:;">
   <hgroup>
     <h2>Scatter plots</h2>
   </hgroup>
@@ -380,7 +556,7 @@ as.numeric(x)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-20" style="background:;">
+<slide class="" id="slide-27" style="background:;">
   <hgroup>
     <h2>Bar charts</h2>
   </hgroup>
@@ -391,7 +567,7 @@ as.numeric(x)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-21" style="background:;">
+<slide class="" id="slide-28" style="background:;">
   <hgroup>
     <h2>Línea</h2>
   </hgroup>
@@ -402,7 +578,7 @@ as.numeric(x)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-22" style="background:;">
+<slide class="" id="slide-29" style="background:;">
   <hgroup>
     <h2>Box plots</h2>
   </hgroup>
@@ -479,74 +655,116 @@ as.numeric(x)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=11 title='Atributos'>
+        data-slide=11 title='Matrices'>
          11
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=12 title='Atributos'>
+        data-slide=12 title='Matrices'>
          12
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=13 title='Operaciones básicas'>
+        data-slide=13 title='Atributos'>
          13
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=14 title='Estructuras de control'>
+        data-slide=14 title='cbind-ing y rbind-ing'>
          14
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=15 title='Lectura de datos'>
+        data-slide=15 title='Listas'>
          15
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=16 title='Visualización con ggplot2'>
+        data-slide=16 title='Factores'>
          16
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=17 title='Gramática'>
+        data-slide=17 title='Factores ordenados'>
          17
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=18 title='Histograma'>
+        data-slide=18 title='Atributos'>
          18
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=19 title='Scatter plots'>
+        data-slide=19 title='Atributos'>
          19
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=20 title='Bar charts'>
+        data-slide=20 title='Operaciones básicas'>
          20
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=21 title='Línea'>
+        data-slide=21 title='Estructuras de control'>
          21
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=22 title='Box plots'>
+        data-slide=22 title='Lectura de datos'>
          22
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=23 title='Visualización con ggplot2'>
+         23
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=24 title='Gramática'>
+         24
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=25 title='Histograma'>
+         25
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=26 title='Scatter plots'>
+         26
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=27 title='Bar charts'>
+         27
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=28 title='Línea'>
+         28
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=29 title='Box plots'>
+         29
       </a>
     </li>
   </ul>
