--- a/lecciones/02_base_teorica/index.html
+++ b/lecciones/02_base_teorica/index.html
@@ -264,7 +264,7 @@
     <h2>Análisis Causal</h2>
   </hgroup>
   <article data-timings="">
-    <p><strong>Objetivo</strong>: Investigar que el comportamiento de una variable al realizar modificaciones sobre otras variables.</p>
+    <p><strong>Objetivo</strong>: Investigar que ocurren con el comportamiento de una variable al modificar otras variables.</p>
 
 <ul>
 <li>Una condición fundamental para identificar causalidad es la <strong>asignación aleatoria</strong></li>
@@ -285,7 +285,7 @@
   <article data-timings="">
     <p><img class=center src="../assets/img/example-causal-analysis.png" height=450 /></p>
 
-<p><a href="http://fcrstemalgebra1.pbworks.com/w/file/fetch/82019231/1e.%20Sex%20role%20stereotypes.pdf">Inuence of sex role stereotypes on personnel decisions</a></p>
+<p><a href="http://fcrstemalgebra1.pbworks.com/w/file/fetch/82019231/1e.%20Sex%20role%20stereotypes.pdf">Influence of sex role stereotypes on personnel decisions</a></p>
 
   </article>
   <!-- Presenter Notes -->
