--- a/lecciones/03_git/index.html
+++ b/lecciones/03_git/index.html
@@ -300,7 +300,20 @@
     <h2>Sincronizar cambios (pull)</h2>
   </hgroup>
   <article data-timings="">
-    <p>Para sincronizar el reporitorio local con los últimos cambios del repositorio remoto (github) </p>
+    <p>Para sincronizar el reporitorio local con los últimos cambios en el repositorio original debemos primero agregar este repositorio, normalmente llamado <strong>upstream</strong>, a nuestro repositorio local</p>
+
+<p><img class=center src="../assets/img/add_upstream_repo.png" height=500 /></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-16" style="background:;">
+  <hgroup>
+    <h2>Sincronizar cambios (pull)</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>Luego de agregar el repositorio upstream, seguir los siguientes pasos:</p>
 
 <ol>
 <li><p>Clic en el botón <strong>Pull</strong> del menú superior</p></li>
@@ -315,7 +328,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-16" style="background:;">
+<slide class="" id="slide-17" style="background:;">
   <hgroup>
     <h2>Lenguaje Markdown</h2>
   </hgroup>
@@ -328,7 +341,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-17" style="background:;">
+<slide class="" id="slide-18" style="background:;">
   <hgroup>
     <h2>Sintaxis para encabezados</h2>
   </hgroup>
@@ -351,7 +364,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-18" style="background:;">
+<slide class="" id="slide-19" style="background:;">
   <hgroup>
     <h2>Sintaxis para listas</h2>
   </hgroup>
@@ -382,7 +395,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-19" style="background:;">
+<slide class="" id="slide-20" style="background:;">
   <hgroup>
     <h2>Sintaxis para enlaces e imágenes</h2>
   </hgroup>
@@ -403,7 +416,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-20" style="background:;">
+<slide class="" id="slide-21" style="background:;">
   <hgroup>
     <h2>Sintaxis para formato de texto</h2>
   </hgroup>
@@ -527,32 +540,38 @@
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=16 title='Lenguaje Markdown'>
+        data-slide=16 title='Sincronizar cambios (pull)'>
          16
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=17 title='Sintaxis para encabezados'>
+        data-slide=17 title='Lenguaje Markdown'>
          17
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=18 title='Sintaxis para listas'>
+        data-slide=18 title='Sintaxis para encabezados'>
          18
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=19 title='Sintaxis para enlaces e imágenes'>
+        data-slide=19 title='Sintaxis para listas'>
          19
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=20 title='Sintaxis para formato de texto'>
+        data-slide=20 title='Sintaxis para enlaces e imágenes'>
          20
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=21 title='Sintaxis para formato de texto'>
+         21
       </a>
     </li>
   </ul>
