--- a/lecciones/04_r_intro/index.html
+++ b/lecciones/04_r_intro/index.html
@@ -646,12 +646,68 @@ if (x==10) {  # !=
 
 <slide class="" id="slide-26" style="background:;">
   <hgroup>
-    <h2>Loop: apply</h2>
+    <h2>Ciclos: for</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>Los ciclos <code>for</code> toman una variable <em>interator</em> y le asignan valores sucesivos de una secuencia o vector. Los ciclos <code>for</code> son los más utilizados para iterar sobre los elementos de un objeto</p>
+
+<pre><code class="r">x = data.frame(c1 = 4:6, c2 = 18:20)
+for(i in seq_len(nrow(x))) {
+  print(x[i, &#39;c1&#39;])  # por cada fila imprimo el valor de la primera columna (nombre)
+  print(x[i, 2])     # por cada fila imprimo el valor de la segunda columna (número)
+}
+</code></pre>
+
+<pre><code>## [1] 4
+## [1] 18
+## [1] 5
+## [1] 19
+## [1] 6
+## [1] 20
+</code></pre>
+
+<p>Este ciclo toma la variable <code>i</code> y en cada iteración le asigna un nro de fila (1, 2, 3) y luego termina.</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-27" style="background:;">
+  <hgroup>
+    <h2>Iteraciones: apply</h2>
   </hgroup>
   <article data-timings="">
     <p>La función <code>apply</code> nos permite ejecutar operaciones repetitivas sobre matrices y data frames</p>
 
-<pre><code class="r">x = data.frame(c1 = 1:2, c2 = 10:11); x
+<pre><code class="r">x = data.frame(c1 = 1:3, c2 = 10:12); x
+</code></pre>
+
+<pre><code>##   c1 c2
+## 1  1 10
+## 2  2 11
+## 3  3 12
+</code></pre>
+
+<pre><code class="r">apply(x, 2, median)  # apply(&lt;objeto&gt;, &lt;fila (1) o columna (2)&gt;, &lt;funcion&gt;)
+</code></pre>
+
+<pre><code>## c1 c2 
+##  2 11
+</code></pre>
+
+<p>Otras funciones que se puede utilizar: max, min, mean, sum</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-28" style="background:;">
+  <hgroup>
+    <h2>Iteraciones: apply</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">x = data.frame(c1 = 1:2, c2 = 10:11)
+x
 </code></pre>
 
 <pre><code>##   c1 c2
@@ -674,7 +730,7 @@ apply(x, 2, mult, 5)  # apply(&lt;objeto&gt;, &lt;fila (1) o columna (2)&gt;, &l
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-27" style="background:;">
+<slide class="" id="slide-29" style="background:;">
   <hgroup>
     <h2>Funciones especiales para operaciones comúnes</h2>
   </hgroup>
@@ -703,91 +759,154 @@ x
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-28" style="background:;">
+<slide class="" id="slide-30" style="background:;">
   <hgroup>
     <h2>Lectura de datos</h2>
   </hgroup>
   <article data-timings="">
-    <p class='..</p>
+    <p><code>read.csv</code> es las función más utilizadas para la lectura de datos en formato csv. Algunos de sus parámetros son:</p>
 
- '></article>
-  <!-- Presenter Notes -->
-</slide>
+<ul>
+<li><code>file</code>, nombre del archivo, incluyendo la ruta al mismo</li>
+<li><code>header</code>, parámetro lógico indicando si el archivo cuenta con un encabezado</li>
+<li><code>skip</code>, número de filas a ignorar desde el inicio del archivo</li>
+<li><code>colClasses</code>, un vector de caracteres indicando la clase de cada columna en el dataset</li>
+<li><code>nrows</code>, el número de filas del dataset a leer</li>
+<li><code>comment.char</code>, cadena de caracteres indicando el caracter usado para comentarios</li>
+<li><code>stringsAsFactors</code>, parámetro lógico indicando si las variables de tipo caracter deben ser codificadas como factores</li>
+</ul>
 
-<slide class="" id="slide-29" style="background:;">
-  <hgroup>
-    <h2>Visualización con ggplot2</h2>
-  </hgroup>
-  <article data-timings="">
-    <p class='..</p>
+<pre><code class="r">data = read.csv(file = &#39;becal-cobertura.csv&#39;, header = T, stringsAsFactors = F)
+</code></pre>
 
- '></article>
-  <!-- Presenter Notes -->
-</slide>
-
-<slide class="" id="slide-30" style="background:;">
-  <hgroup>
-    <h2>Gramática</h2>
-  </hgroup>
-  <article data-timings="">
-    <p class='..</p>
-
- '></article>
+  </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-31" style="background:;">
   <hgroup>
-    <h2>Histograma</h2>
+    <h2>Estructura de datos</h2>
   </hgroup>
   <article data-timings="">
-    <p class='..</p>
+    <p>La función <code>str</code> se utiliza para una exploración rápida de la estructura del dataset</p>
 
- '></article>
+<pre><code class="r">str(data, vec.len=1)
+</code></pre>
+
+<pre><code>## &#39;data.frame&#39;:    907 obs. of  9 variables:
+##  $ No                                    : int  1 2 ...
+##  $ C.I.                                  : chr  &quot;2.485.187&quot; ...
+##  $ Nombre.y.Apellido                     : chr  &quot;Alejandra Recalde Carballo&quot; ...
+##  $ Tipo.de.Beca..según.Programa.aprobado.: chr  &quot;Doctorado para Investigadores en CyT&quot; ...
+##  $ Maestria...Doctorado                  : chr  &quot;Doctorado en Biotecnología Molecular&quot; ...
+##  $ Universidad.de.Destino                : chr  &quot;Universidad de Chile&quot; ...
+##  $ Pais                                  : chr  &quot;Chile&quot; ...
+##  $ Dept..de.Origen                       : chr  &quot;Capital&quot; ...
+##  $ Total.General                         : chr  &quot;$             82.896&quot; ...
+</code></pre>
+
+  </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-32" style="background:;">
   <hgroup>
-    <h2>Scatter plots</h2>
+    <h2>Visualización</h2>
   </hgroup>
   <article data-timings="">
-    <p class='..</p>
+    <p>Funciones de visualización más comunes:</p>
 
- '></article>
+<p>1 variable:</p>
+
+<ul>
+<li>Histogramas</li>
+<li>Boxplots</li>
+<li>Barra</li>
+<li>Linea</li>
+</ul>
+
+<p>2 variables:</p>
+
+<ul>
+<li>Scatterplots</li>
+</ul>
+
+  </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-33" style="background:;">
   <hgroup>
-    <h2>Bar charts</h2>
+    <h2>Histograma</h2>
   </hgroup>
   <article data-timings="">
-    <p class='..</p>
+    <pre><code class="r">hist(autos$mpg, col=&#39;green&#39;, main=&#39;Distribución de las millas por galón&#39;, 
+     xlab=&#39;Millas por galón&#39;, ylab=&#39;Frecuencia&#39;)
+</code></pre>
 
- '></article>
+<p><img src="assets/fig/unnamed-chunk-37-1.png" title="plot of chunk unnamed-chunk-37" alt="plot of chunk unnamed-chunk-37" style="display: block; margin: auto;" /></p>
+
+  </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-34" style="background:;">
   <hgroup>
-    <h2>Línea</h2>
+    <h2>Boxplots</h2>
   </hgroup>
   <article data-timings="">
-    <p class='..</p>
+    <pre><code class="r">boxplot(autos$hp, col=&#39;red&#39;, main=&#39;Distribución de caballos de fuerza&#39;, 
+        ylab=&#39;Caballos de fuerza&#39;)
+</code></pre>
 
- '></article>
+<p><img src="assets/fig/unnamed-chunk-38-1.png" title="plot of chunk unnamed-chunk-38" alt="plot of chunk unnamed-chunk-38" style="display: block; margin: auto;" /></p>
+
+  </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-35" style="background:;">
   <hgroup>
-    <h2>Box plots</h2>
+    <h2>Barra</h2>
   </hgroup>
   <article data-timings="">
-    <p class='..</p>
+    <pre><code class="r">barplot(table(autos$am), col=&#39;green&#39;, xlab=&#39;Tipo de transmisión&#39;,
+        main=&#39;Nro. de vehículos por tipo de transmisión&#39;)
+</code></pre>
 
- '></article>
+<p><img src="assets/fig/unnamed-chunk-40-1.png" title="plot of chunk unnamed-chunk-40" alt="plot of chunk unnamed-chunk-40" style="display: block; margin: auto;" /></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-36" style="background:;">
+  <hgroup>
+    <h2>Linea</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">plot(presidents, ylab = &#39;Porcentage de aprobación (%)&#39;, xlab=&#39;Año&#39;,
+     main = &#39;Aprobación (1er cuatrimestre) Presidentes de EEUU&#39;)
+</code></pre>
+
+<p><img src="assets/fig/unnamed-chunk-41-1.png" title="plot of chunk unnamed-chunk-41" alt="plot of chunk unnamed-chunk-41" style="display: block; margin: auto;" /></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-37" style="background:;">
+  <hgroup>
+    <h2>Scatterplots</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">plot(autos$mpg, autos$wt, col=&#39;blue&#39;, xlab=&#39;Millas por galón&#39;, ylab=&#39;Peso (libras)&#39;,
+     main=&#39;Relación entre peso del vehículo y millas recorridas por galón&#39;)
+</code></pre>
+
+<p><img src="assets/fig/unnamed-chunk-42-1.png" title="plot of chunk unnamed-chunk-42" alt="plot of chunk unnamed-chunk-42" style="display: block; margin: auto;" /></p>
+
+  </article>
   <!-- Presenter Notes -->
 </slide>
 
@@ -947,62 +1066,74 @@ x
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=26 title='Loop: apply'>
+        data-slide=26 title='Ciclos: for'>
          26
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=27 title='Funciones especiales para operaciones comúnes'>
+        data-slide=27 title='Iteraciones: apply'>
          27
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=28 title='Lectura de datos'>
+        data-slide=28 title='Iteraciones: apply'>
          28
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=29 title='Visualización con ggplot2'>
+        data-slide=29 title='Funciones especiales para operaciones comúnes'>
          29
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=30 title='Gramática'>
+        data-slide=30 title='Lectura de datos'>
          30
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=31 title='Histograma'>
+        data-slide=31 title='Estructura de datos'>
          31
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=32 title='Scatter plots'>
+        data-slide=32 title='Visualización'>
          32
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=33 title='Bar charts'>
+        data-slide=33 title='Histograma'>
          33
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=34 title='Línea'>
+        data-slide=34 title='Boxplots'>
          34
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=35 title='Box plots'>
+        data-slide=35 title='Barra'>
          35
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=36 title='Linea'>
+         36
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=37 title='Scatterplots'>
+         37
       </a>
     </li>
   </ul>
