--- a/lecciones/04_r_intro/index.html
+++ b/lecciones/04_r_intro/index.html
@@ -732,6 +732,35 @@ apply(x, 2, mult, 5)  # apply(&lt;objeto&gt;, &lt;fila (1) o columna (2)&gt;, &l
 
 <slide class="" id="slide-29" style="background:;">
   <hgroup>
+    <h2>Iteraciones: sapply</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>Similar a su par <code>apply</code> pero para listas y vectores. Retorna una lista</p>
+
+<pre><code class="r">x = data.frame(c1 = 1:2, c2 = 10:11)
+x
+</code></pre>
+
+<pre><code>##   c1 c2
+## 1  1 10
+## 2  2 11
+</code></pre>
+
+<pre><code class="r">area_circulo = function(r) {
+  return (3.14*r^2)
+}
+sapply(x[,&#39;c1&#39;], area_circulo)  # sapply(&lt;lista o vector&gt;, &lt;funcion&gt;, &lt;otros parametros&gt;)
+</code></pre>
+
+<pre><code>## [1]  3.14 12.56
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-30" style="background:;">
+  <hgroup>
     <h2>Funciones especiales para operaciones comúnes</h2>
   </hgroup>
   <article data-timings="">
@@ -759,12 +788,12 @@ x
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-30" style="background:;">
+<slide class="" id="slide-31" style="background:;">
   <hgroup>
     <h2>Lectura de datos</h2>
   </hgroup>
   <article data-timings="">
-    <p><code>read.csv</code> es las función más utilizadas para la lectura de datos en formato csv. Algunos de sus parámetros son:</p>
+    <p><code>read.csv</code> es la función más utilizadas para la lectura de datos en formato csv. Algunos de sus parámetros son:</p>
 
 <ul>
 <li><code>file</code>, nombre del archivo, incluyendo la ruta al mismo</li>
@@ -783,7 +812,27 @@ x
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-31" style="background:;">
+<slide class="" id="slide-32" style="background:;">
+  <hgroup>
+    <h2>Escritura de datos</h2>
+  </hgroup>
+  <article data-timings="">
+    <p><code>write.csv</code> es la función más utilizadas para la escritura de datos en formato csv. Algunos de sus parámetros son:</p>
+
+<ul>
+<li>x, dataset a guardar en archivo </li>
+<li><code>file</code>, nombre del archivo, incluyendo la ruta al mismo</li>
+<li><code>row.names</code>, ignorar o no nombre de filas</li>
+</ul>
+
+<pre><code class="r">write.csv(x, &#39;leccion4.csv&#39;, row.names=F)
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-33" style="background:;">
   <hgroup>
     <h2>Estructura de datos</h2>
   </hgroup>
@@ -809,7 +858,7 @@ x
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-32" style="background:;">
+<slide class="" id="slide-34" style="background:;">
   <hgroup>
     <h2>Visualización</h2>
   </hgroup>
@@ -835,7 +884,7 @@ x
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-33" style="background:;">
+<slide class="" id="slide-35" style="background:;">
   <hgroup>
     <h2>Histograma</h2>
   </hgroup>
@@ -844,13 +893,13 @@ x
      xlab=&#39;Millas por galón&#39;, ylab=&#39;Frecuencia&#39;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-37-1.png" title="plot of chunk unnamed-chunk-37" alt="plot of chunk unnamed-chunk-37" style="display: block; margin: auto;" /></p>
+<p><img src="assets/fig/unnamed-chunk-39-1.png" title="plot of chunk unnamed-chunk-39" alt="plot of chunk unnamed-chunk-39" style="display: block; margin: auto;" /></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-34" style="background:;">
+<slide class="" id="slide-36" style="background:;">
   <hgroup>
     <h2>Boxplots</h2>
   </hgroup>
@@ -859,13 +908,13 @@ x
         ylab=&#39;Caballos de fuerza&#39;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-38-1.png" title="plot of chunk unnamed-chunk-38" alt="plot of chunk unnamed-chunk-38" style="display: block; margin: auto;" /></p>
+<p><img src="assets/fig/unnamed-chunk-40-1.png" title="plot of chunk unnamed-chunk-40" alt="plot of chunk unnamed-chunk-40" style="display: block; margin: auto;" /></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-35" style="background:;">
+<slide class="" id="slide-37" style="background:;">
   <hgroup>
     <h2>Barra</h2>
   </hgroup>
@@ -874,13 +923,13 @@ x
         main=&#39;Nro. de vehículos por tipo de transmisión&#39;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-40-1.png" title="plot of chunk unnamed-chunk-40" alt="plot of chunk unnamed-chunk-40" style="display: block; margin: auto;" /></p>
+<p><img src="assets/fig/unnamed-chunk-42-1.png" title="plot of chunk unnamed-chunk-42" alt="plot of chunk unnamed-chunk-42" style="display: block; margin: auto;" /></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-36" style="background:;">
+<slide class="" id="slide-38" style="background:;">
   <hgroup>
     <h2>Linea</h2>
   </hgroup>
@@ -889,13 +938,13 @@ x
      main = &#39;Aprobación (1er cuatrimestre) Presidentes de EEUU&#39;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-41-1.png" title="plot of chunk unnamed-chunk-41" alt="plot of chunk unnamed-chunk-41" style="display: block; margin: auto;" /></p>
+<p><img src="assets/fig/unnamed-chunk-43-1.png" title="plot of chunk unnamed-chunk-43" alt="plot of chunk unnamed-chunk-43" style="display: block; margin: auto;" /></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-37" style="background:;">
+<slide class="" id="slide-39" style="background:;">
   <hgroup>
     <h2>Scatterplots</h2>
   </hgroup>
@@ -904,7 +953,7 @@ x
      main=&#39;Relación entre peso del vehículo y millas recorridas por galón&#39;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-42-1.png" title="plot of chunk unnamed-chunk-42" alt="plot of chunk unnamed-chunk-42" style="display: block; margin: auto;" /></p>
+<p><img src="assets/fig/unnamed-chunk-44-1.png" title="plot of chunk unnamed-chunk-44" alt="plot of chunk unnamed-chunk-44" style="display: block; margin: auto;" /></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -1084,56 +1133,68 @@ x
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=29 title='Funciones especiales para operaciones comúnes'>
+        data-slide=29 title='Iteraciones: sapply'>
          29
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=30 title='Lectura de datos'>
+        data-slide=30 title='Funciones especiales para operaciones comúnes'>
          30
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=31 title='Estructura de datos'>
+        data-slide=31 title='Lectura de datos'>
          31
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=32 title='Visualización'>
+        data-slide=32 title='Escritura de datos'>
          32
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=33 title='Histograma'>
+        data-slide=33 title='Estructura de datos'>
          33
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=34 title='Boxplots'>
+        data-slide=34 title='Visualización'>
          34
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=35 title='Barra'>
+        data-slide=35 title='Histograma'>
          35
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=36 title='Linea'>
+        data-slide=36 title='Boxplots'>
          36
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=37 title='Scatterplots'>
+        data-slide=37 title='Barra'>
          37
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=38 title='Linea'>
+         38
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=39 title='Scatterplots'>
+         39
       </a>
     </li>
   </ul>
